--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -564,11 +564,11 @@
                                 <ul class="collapse list-unstyled collapse-2">
                                     <li><a class="child 2" href="#download3"><span class="numbers">3.1.</span> Installation</a>
                                         <ul>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.3</span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
-                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#Software Requirements"><span class="numbers">3.1.1</span> <span style="margin-left:5px;">Software Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="Hardware Requirements"><span class="numbers">3.1.2</span> <span style="margin-left:5px;">Hardware Requirements</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#Installation Instructions"><span class="numbers">3.1.3</span> <span style="margin-left:5px;">Installation Instructions</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#Installing Techforce OCR"><span class="numbers">3.1.4</span> <span style="margin-left:5px;">Installing Techforce OCR</span></a></li>
+                                           <li style="margin-left:20px;"><a class="child 2" href="#Un-install Instructions"><span class="numbers">3.1.5</span> <span style="margin-left:5px;">Un-install Instructions</span></a></li>
                                         </ul>
                                     </li>
                                     <li><a class="child 2" href="#install3"><span class="numbers">3.2.</span> Building a basic bot</a></li>
@@ -590,15 +590,52 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.1</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2</span> <span style="margin-left:5px;">Desktop Automation</span></a>
                                           <ul>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.1</span> <span style="margin-left:5px;">Keyboard Shortcuts</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.2</span> <span style="margin-left:5px;">Drag and Drop</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.3</span> <span style="margin-left:5px;">Open App</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.4</span> <span style="margin-left:5px;">Close App</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.5</span> <span style="margin-left:5px;">Close</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.6</span> <span style="margin-left:5px;">Switch App</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.7</span> <span style="margin-left:5px;">Screenshot</span></a></li>
-                                         </ul></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3</span> <span style="margin-left:5px;">Web Automation</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.1</span> <span style="margin-left:10px;">Keyboard Shortcuts</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.2</span> <span style="margin-left:10px;">Drag and Drop</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.3</span> <span style="margin-left:10px;">Open App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.4</span> <span style="margin-left:10px;">Close App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.5</span> <span style="margin-left:10px;">Close</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.6</span> <span style="margin-left:10px;">Switch App</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.2.7</span> <span style="margin-left:10px;">Screenshot</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3</span> <span style="margin-left:5px;">Web Automation</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.1</span> <span style="margin-left:10px;">Open Webpage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.2</span> <span style="margin-left:10px;">Read Table</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.3</span> <span style="margin-left:10px;">Frame</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.4</span> <span style="margin-left:10px;">Popup</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.5</span> <span style="margin-left:10px;">Show</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.6</span> <span style="margin-left:10px;">Snap</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.7</span> <span style="margin-left:10px;">Dom</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.8</span> <span style="margin-left:10px;">Scroll</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.3.9</span> <span style="margin-left:10px;">Back</span></a></li>
+                                          </ul></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4</span> <span style="margin-left:5px;">General Actions</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.1</span> <span style="margin-left:5px;">Enter Keystrokes</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.2</span> <span style="margin-left:5px;">Stop</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.3</span> <span style="margin-left:5px;">Echo</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.4</span> <span style="margin-left:5px;">Message Box</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.5</span> <span style="margin-left:5px;">Clipboard</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.6</span> <span style="margin-left:5px;">Get Secret</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.7</span> <span style="margin-left:5px;">Get Credentials</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.8</span> <span style="margin-left:5px;">Read</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.9</span> <span style="margin-left:5px;">Wait</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.10</span> <span style="margin-left:5px;">HTTP API</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.11</span> <span style="margin-left:5px;">Asssign</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.12</span> <span style="margin-left:5px;">Ask</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.13</span> <span style="margin-left:5px;">Active Window</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.14</span> <span style="margin-left:5px;">Sub Flow</span></a></li>
+
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15</span> <span style="margin-left:5px;">Mouse Actions</span></a>
+                                          <ul>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15.1</span><span style="margin-left:5px;">Stage</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15.2</span> <span style="margin-left:5px;">Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15.3</span> <span style="margin-left:5px;">Right Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15.4</span> <span style="margin-left:5px;">Double Click</span></a></li>
+                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4.4.15.5</span> <span style="margin-left:5px;">Hover</span></a></li>
+                                          </ul></li>
+
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
@@ -614,12 +651,8 @@
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
                                           <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
-                                          <li style="margin-left:20px;"><a class="child 2" href="#download3"><span class="numbers">3.4</span> <span style="margin-left:5px;">Stage</span></a></li>
+
+                                        </ul></li>
                                         </ul>
                                       </li>
                                 </ul>
