--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -957,61 +957,61 @@
                           <div id="Open"  class="page-section">
                             <h4 class="pink">3.3.2 Open</h4>
                             <p>Used to open the existing file. Open a project the user worked on recently. By default, projects are created in C:\Users\\Documents\Techforce-IDE.The Open project dialog searches for project. Json files.</p>
-                            <img src="{{ '/assets/images/doc-img20.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:45%;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img20.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 6: </span>  Open</p>
                           </div>
                           <div id="Save"  class="page-section">
                             <h4 class="purple">3.3.3 Save</h4>
                             <p>Used to save the created script or Modified Script. It is used to save an RPA task with a name. Shortcut is Ctrl+S.</p>
-                            <img src="{{ '/assets/images/doc-img21.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:45%;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img21.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 7: </span>  Save</p>
                           </div>
                           <div id="Record"  class="page-section">
                             <h4 class="gray">3.3.4 Record</h4>
                             <p>Used to Record the WEB operations, simply called a Web-Recorder to automate the browser functionalities.</p>
                             <p>Techforce RPA Web Automation uses a built-in recorder that can read and enact web-based activities. It identifies web elements by their attributes and accurately manipulates them while keeping up with website changes.</p>
-                            <img src="{{ '/assets/images/doc-img22.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img22.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 8: </span> Record</p>
                           </div>
                           <div id="Clear"  class="page-section">
                             <h4 class="violet">3.3.5 Clear</h4>
                             <p>Used to close the opened scripts. That means to clear any task (which the user may want to clear or close).</p>
-                            <img src="{{ '/assets/images/doc-img23.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img23.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 9: </span>  clear</p>
                           </div>
                           <div id="Publish"  class="page-section">
                             <h4 class="purple">3.3.6 Publish</h4>
                             <p>Used to publish the developed script using the required user credentials and IP.</p>
                             <ol>
-                            <img src="{{ '/assets/images/doc-img24.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img24.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 10: </span>  Publish</p>
-                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img25.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 11: </span>  Publish Configuration</p>
                           </ol>
                           </div>
                           <div id="Settings"  class="page-section">
                             <h4 class="green">3.3.7 Settings</h4>
                             <p>Used to set the global wait time of the flow and basic Chrome dimensions.</p>
-                            <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img26.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 12: </span> Settings</p>
                             <p>Also, it asks Chrome should open or close at the time of exception and at the time of flow completion.</p>
-                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img27.png' | relative_url }}" alt="image" style="width:400px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 13: </span>  Global settings</p>
                           </div>
                           <div id="Stop"  class="page-section">
                             <h4 class="skyblue">3.3.8 Stop</h4>
                             <p>Used to stop the execution of flow while it is running.</p>
-                            <img src="{{ '/assets/images/doc-img28.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img28.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 14: </span>  Stop</p>
                           </div>
                           <div id="Play"  class="page-section">
                             <h4 class="purple">3.3.9 Play</h4>
                             <p>Used to run the flow to start the execution.</p>
-                            <img src="{{ '/assets/images/doc-img29.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img29.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 15: </span>  Play</p>
                             <li class="numbers">Play NOw</li>
                             <p>Used to run the flow instantly.Validate and run the workflow, while using debugging tools to set breakpoints, monitor the execution of activities step by step, and adjust the debugging speed. Open logs to view details regarding execution and any changes made to the project.</p>
-                            <img src="{{ '/assets/images/doc-img30.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;margin-left:20px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img30.png' | relative_url }}" alt="image" style="width:100px;margin-top:10px;border:1px solid green;margin-left:45%;margin-bottom:10px;">
                             <p><span class="numbers">Figure 16: </span>  Play Now</p>
                           </div>
 
@@ -1027,45 +1027,45 @@
                             <li>Programming</li>
                             <li>Mail Integration</li>
                             <li>Database</li>
-                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img31.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 17: </span>  Action Library</p>
 
                             <li>Stage Category</li>
                             <p>In Techforce RPA Studio, Stage Action is used to divide the flow into sub-flows in order to divide the functionalities and reduce the flow confusion to the developers.</p>
-                            <img src="{{ '/assets/images/doc-img32.png' | relative_url }}" alt="image" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img32.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 18: </span>  Stage Action</p>
 
                             <li> Desktop Automation</li>
                             <p>Desktop Automation is used to automate the desktop applications like Notepad, Excel, MS- Word, folders, files, images and screen functionalities using sub-actions like keyboard shortcuts, Drag and Drop, Open App, Close APP, Close File and Switch App.</p>
-                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img33.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 19: </span> Techforce RPA Studio Desktop Automation</p>
 
                             <li>3.4.2 Web Automation</li>
                             <p>Web Automation is used to automate the browser applications like Chrome, Firefox and Internet Explorer, etc., using the Sub-Actions like Open Webpage, Read Table, Frame, Popup, Show, Snap, Dom, Scroll and Back.</p>
-                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img34.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 20: </span> Techforce RPA Studio Web Automation</p>
 
                             <h4 class="purple">3.4.2 General</h4>
                             <p>General Action is used to automate normal desktop-based and web-based operations using Sub-Actions</p>
                             <p>The Sub-Actions like Mouse Clicks, Conditions, Excel, Loops, Jump Statements, OCR, Exceptional Handling, Files and Folders, Secure FTP, CSV, Stop, Message Box, Clipboard, Assign, Ask, HTTP API, Wait, Read, Get Credentials, Get Secret, Echo, Enter Keystrokes, Read and Module are used in General Action.</p>
-                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
-                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;margin-left:40px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img35.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img36.png' | relative_url }}" alt="image" style="width:200px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 21: </span> Techforce RPA Studio General</p>
 
                             <h4 class="purple">3.4.2 Programming</h4>
                             <p>Programming Action is containing String and Technology Sub-Actions. Using String Sub-Action, the user can perform string operations and match case operations. By using Programming Sub-Action, the user can include the programming languages like JavaScript, Python, R and Auto Hotkey scripting, available to automate.</p>
-                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img37.png' | relative_url }}" alt="image" style=" width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 23: </span> Techforce RPA Studio File Tab</p>
 
                             <h4 class="purple">3.4.2 Mail Integration</h4>
                             <p>Mail Integration is used to automate mail operations to configure Read Mail, Send Mail and Save Attachments using Sub-Actions: IMAP, POP3, OutLook2016 and Save Attachments.</p>
-                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img38.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 24: </span> Techforce RPA Studio Mail Integration</p>
 
                             <h4 class="purple">3.4.2 Database</h4>
                             <p>The Database used to connect to the database and send or retrieve the data from the Connection: Connects to MySQL or PostgresSQL Database.</p>
                             <li><span>Execute Query: </span>Executes the database query on the connected database.</li>
-                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:100px;margin-left:20px;margin-top:10px;margin-bottom:10px;">
+                            <img src="{{ '/assets/images/doc-img39.png' | relative_url }}" alt="image" style="width:300px;border:1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                             <p><span class="numbers">Figure 25: </span> Techforce RPA Studio Database</p>
                           </div>
 
